# spawn

./: .env.example  .gitignore  ARTIFACT_SCHEMA_SPECIFICATION.md  Cargo.toml  MASTERDOCUMENT.md  README.md  aichat.md  artifact.types.ts  claude.md  code-execution.md  package.json  pnpm-lock.yaml  sandboxv2.md  spawn-control-panel.html  spawn.db  spinners.md  start.sh  stop.sh  structured-outputs.md  terminal-code.txt  tools.md
.claude/: settings.local.json
agent-training/: Agent-workspace.jsx  advanced-usage.md  asynchronous-requests.md  chat-with-files.md  collections-search-tool.md  function-calling.md  live-search.md  managing-files.md  prompt-engineering-for-grok-code.md  remote-mcp-tools.md  stateful-responses.md  structured-outputs.md  using-collections.md
config/: prompts.json  spawn.json
containers/: .env.example  Caddyfile  Containerfile.agent  compose.yaml  entrypoint.sh  setup-gvisor.sh  start.sh
crates/: package-lock.json  package.json  pnpm-lock.yaml
crates/spawn-agents/: Cargo.toml
crates/spawn-agents/src/: lib.rs  memory.rs  orchestrator.rs  tools.rs  vector_memory.rs
crates/spawn-ai/: Cargo.toml
crates/spawn-ai/src/: lib.rs  openrouter.rs
crates/spawn-api/: Cargo.toml
crates/spawn-api/src/: admin.rs  architect.rs  files.rs  main.rs  search.rs  terminal.rs
crates/spawn-core/: Cargo.toml
crates/spawn-core/src/: lib.rs
crates/terminal-app/: Cargo.toml
crates/terminal-app/src/: error.rs  main.rs  routes.rs  state.rs
crates/terminal-app/src/handlers/: editor.rs  files.rs  mod.rs  terminal.rs  webrtc.rs
crates/terminal-code-editor/: Cargo.toml
crates/terminal-code-editor/src/: lib.rs
crates/terminal-core/: Cargo.toml
crates/terminal-core/src/: buffer.rs  error.rs  lib.rs  pty.rs  session.rs
crates/terminal-file/: Cargo.toml
crates/terminal-file/src/: lib.rs
crates/terminal-webrtc/: Cargo.toml
crates/terminal-webrtc/src/: lib.rs
migrations/: 20241208000000_init.sql
migrations/postgres/: 20241209000000_pgvector.sql
sandbox-server/: .env.example  README.md  architect-scopes.js  code-quality-prompt.js  docker-compose.yml  github-analysis-prompt.js  init-db.sql  package-lock.json  package.json  server.js  setup-workspace.sh  setup.sh
sandbox-server/container/: install-podman.sh
sandbox-server/public/: index.html
sandbox-server/public/workspace/: sandbox_demo.py  snake_game.py
web/: index.html  package.json  pnpm-lock.yaml  spawn.db  tailwind.config.js  vite.config.ts
web/admin/: index.html
web/sandbox/: index.html
web/src/: App.tsx  index.css  main.tsx
web/src/components/: AgentConfig.tsx  Artifacts.tsx  BrowserPanel.tsx  Chat.tsx  Editor.tsx  FileExplorer.tsx  GitHubPanel.tsx  Sandbox.tsx  SandboxDocuments.tsx  Terminal.tsx
web/src/components/ui/: ai-prompt-box.tsx  dock.tsx  tooltip.tsx
web/src/hooks/: useCollaboration.ts
web/src/lib/: claudify.ts  collaboration.ts  webrtc.ts  webvm.ts
web/src/stores/: app.ts
webvm-config/: README.md  spawn_dev
