[package]
name = "spawn-agents"
version.workspace = true
edition.workspace = true

[features]
default = ["sqlite"]
sqlite = []
postgres = ["pgvector"]

[dependencies]
spawn-core = { path = "../spawn-core" }
spawn-ai = { path = "../spawn-ai" }
async-trait = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
sha2 = "0.10"
pgvector = { workspace = true, optional = true }
