[package]
name = "spawn-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "spawn"
path = "src/main.rs"

[dependencies]
spawn-core = { path = "../spawn-core" }
spawn-ai = { path = "../spawn-ai" }
spawn-agents = { path = "../spawn-agents" }

# Web framework
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# WebSocket
futures = "0.3"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
base64 = "0.22"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Config
dotenvy = { workspace = true }
anyhow = { workspace = true }

# HTTP client for sandbox health checks & SSE streaming
reqwest = { version = "0.12", features = ["json", "stream"] }
