[package]
name = "terminal-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "terminal-server"
path = "src/main.rs"

[dependencies]
terminal-core = { path = "../terminal-core" }
terminal-code-editor = { path = "../terminal-code-editor" }
terminal-file = { path = "../terminal-file" }
terminal-webrtc = { path = "../terminal-webrtc" }

axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = "0.9"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
