[package]
name = "terminal-code-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
ropey = "1"
tokio = { version = "1", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
