[package]
name = "terminal-core"
version = "0.1.0"
edition = "2021"

[dependencies]
portable-pty = "0.8"
vte = "0.13"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
thiserror = "1"
parking_lot = "0.12"
